checkpoint - delete button event not firing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@ body {
   font-size: 16px;
 }
 
+button {
+  background-color: red;
+  color: white;
+}
 .swim-lanes {
   min-height: 60vh;
 }
@@ -11,6 +15,18 @@ body {
   margin: 0 auto;
 }
 
-.task-card:hover {
-  cursor: grab;
+.task-card:hover { 
+  cursor: grab; 
+}
+
+.task-late {
+  background-color: red;
+}
+
+.task-due-today {
+  background-color: orange;
+}
+
+.task-late, .task-due-today {
+  color: white;
 }
