--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,3 +30,20 @@ button {
 .task-late, .task-due-today {
   color: white;
 }
+
+.droppable {
+  width: 100%;
+  height: 100%;
+  background-color: #f0f0f0;
+  border: 1px dashed #999;
+}
+
+.draggable {
+  width: 100px;
+  height: 100px;
+  /*background-color: #ccc;
+  border: 1px solid #999;
+  margin: 10px;
+  padding: 10px;
+  text-align: center; */
+}
